   - Add IP address to Samsung SmartTV protocol, enabling
     use of multiple devices (MODELER-465, Ivan Martinez)
   - Add content type header field to HTTP protocol
     (MODELER-416, Marcus Redeker)
   - Controller configuration sections have a "reset to
     default values" button (MODELER-453, Eric Bariaux)
   - Add data field to 1-wire protocol (MODELER-435, Marcus
     Redeker)


 Fixes:

   - Fixes to image asset manager (Eric Bariaux, related 
     to MODELER-292)
   - MODELER-302, MODELER-385: List of widgets does not 
     scroll anymore, double scrollbar on widget selection
     (Eric Bariaux)
   - MODELER-304, MODELER-334: UI elements (from panels.obj) 
     restored on login and not when UI designer pane is 
     displayed. "Please wait" message on login only dismissed 
     when UI has been built and initialized. (Eric Bariaux)
   - MODELER-391: Add Domintell connection configuration
     (Eric Bariaux)
   - MODELER-392: Fractional Widget Coordinates when Browser
     has non-default zoom (Eric Bariaux)
   - MODELER-453: Error when attempting to set a controller
     configuration property to an empty value (Eric Bariaux)
   - MODELER-505: LIRC 'name' property renamed to 
     'remotename' and updated import tool accordingly 
     (Marcus Redeker)

 Internal:

  - Image Asset Picker converted to GXT3 (Eric Bariaux, MODELER-330)
  - Hibernate lazy initialization errors on device attributes, 
    correct handling of sensor ID assignments in transactions,
    changes to XML id generation
    (Eric Bariaux, MODELER-389, MODELER-396, MODELER-413)
  

Designer 2.13.9 (2013-03-30 Rosemary)
=====================================

Bug fix release:

  - MODELER-346: regexp validation for IP fields in TCP
    and Telnet protocols were wrong. Validations have
    been disabled (Juha Lindfors)
  - MODELER-348: Prevent caching of GWT Javascript files
    on client browser to avoid Javascript conflicts when
    upgrading to a newer Designer version (Eric Bariaux)