@@ -57,6 +57,12 @@
       </validations>
     </attr>
 
+    <attr name = "ending" label = "Line Endings" options="NONE,LF,CR,CRLF" tooltipMessage="Select line ending">
+      <validations>
+        <allowBlank>true</allowBlank>
+      </validations>
+    </attr>
+
   </protocol>
 </openremote>
 
